--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset="utf-8" />
   <!-- Đảm bảo đường dẫn chính xác đến logo -->
-  <link rel="icon" href="%PUBLIC_URL%/image/logo.png" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/image/logo.png" /> -->
+  <link rel="icon" href="/image/logo.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
   <!-- Apple Touch Icon -->
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/image/logo.png" />
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/image/logo.png" /> -->
+  <link rel="apple-touch-icon" href="/image/logo.png" />
 
   <!-- Font Google -->
   <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=K2D:wght@400;700&display=swap"
