fix/show favicon

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <!-- Đảm bảo đường dẫn chính xác đến logo -->
   <!-- <link rel="icon" href="%PUBLIC_URL%/image/logo.png" /> -->
-  <link rel="icon" href="/image/logo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -13,7 +14,7 @@
 
   <!-- Apple Touch Icon -->
   <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/image/logo.png" /> -->
-  <link rel="apple-touch-icon" href="/image/logo.png" />
+  <link rel="apple-touch-icon" href="Logo.png" />
 
   <!-- Font Google -->
   <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&family=K2D:wght@400;700&display=swap"
